# xLH-applications

./: .gitignore  Makefile  notes.md  pyproject.toml
tools/plantuml/: plantuml_generator.py
xlh-ai-oven/: 0_remove_venv.bat  README.md  config.py  pyproject.toml  tools.py
xlh-ai-oven/codesys/: ai_oven_00_90.project
xlh-ai-oven/notebooks/: agent.py  agent_notebook.ipynb  config.py  llm_model.py  tools.py
xlh-control-systems/codesys/: xlh-control-systems.library  xlh_control_systems_00_10.library
xlh-cv/: README.md
xlh-cv-tutorial/: README.md
xlh-cv-tutorial/4 Weblinks/: README.md
xlh-dc-motor/codesys/: xlh_dc_motor_00_01.project  xlh_dc_motor_advanced_00_01.project  xlh_dc_motor_simple_00_01.project
xlh-ha/: Makefile  README.md  compose_xlh_ha.yml  weblinks.md
xlh-ha/codesys/: xlh_ha_client_00_01.project  xlh_ha_client_00_02.project  xlh_ha_client_00_03.project  xlh_ha_client_00_04.project  xlh_ha_client_00_05.project  xlh_ha_client_00_07.project
xlh-python-tutorial/: README.md
xlh-rgb/: pyproject.toml
xlh-rgb/notebooks/: math_example.ipynb  rgb_example.ipynb  rgb_examples.ipynb
xlh-rover/codesys/: xlh_rover_00_01.project  xlh_rover_remote_signal_test_00_01.project  xlh_rover_signal_test_00_01.project
xlh-thermal-test/: README.md
xlh-thermal-test/3d_print/: Abdeckung_3.stp  Halterung_Basis_2.stp
xlh-thermal-test/codesys/: xlh_thermal_test_00_90.project  xlh_thermal_test_modbus_00_90.project  xlh_thermal_test_modbus_00_91.project  xlh_thermal_test_mqtt_00_92.project
xlh-thermal-test/opcua/: uaexpert_xLH.uap
xlh-transport-trolley/codesys/: xlh_transport_trolley_ST_00_90.project  (+1 more)
(+22 files in other folders)
