[project]
name = "xLH"
version = "0.1.0"
description = ""
authors = [
    { name = "Pascal Helfenstein", email = "pascal.helfenstein@xemax.ch" },
    { name = "Thomas Ruoss", email = "thomas.ruoss@xemax.ch" },
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "rich>=14.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "requests>=2.32.5"
]

[tool.pytest.ini_options]
pythonpath = "."
